set(SERVER_HEADERS attrdesc.h
    attribute.h
    attribute_templ.h
    attrsetval_templ.h
    attrmanip.h
    attrprop.h
    attrprop_templ.h
    auto_tango_monitor.h
    basiccommand.h
    blackbox.h
    classattribute.h
    classpipe.h
    command.h
    pipe.h
    pipe_templ.h
    coutappender.h
    device.h
    device_2.h
    device_3.h
    device_4.h
    device_5.h
    device_6.h
    deviceclass.h
    devintr.h
    dintrthread.h
    dserver.h
    dserverclass.h
    dserversignal.h
    eventsupplier.h
    except.h
    fwdattrdesc.h
    fwdattribute.h
    fwdattribute_templ.h
    log4tango.h
    logcmds.h
    logging.h
    logstream.h
    multiattribute.h
    pipedesc.h
    pollcmds.h
    pollext.h
    pollext_templ.h
    pollobj.h
    pollring.h
    pollring_templ.h
    pollthread.h
    pollthread_templ.h
    readers_writers_lock.h
    rootattreg.h
    seqvec.h
    tango_config.h
    tango_monitor.h
    tangoappender.h
    tangorollingfileappender.h
    utils.h
    utils_templ.h
    utils_spec_templ.h
    w_attribute.h
    w_attrsetval_templ.h
    w_pipe.h
    w_pipe_templ.h
    subdev_diag.h
    encoded_attribute.h
    encoded_format.h
    event_subscription_state.h
    tango_clock.h
    tango_current_function.h
    exception_reason_consts.h)

install(FILES ${SERVER_HEADERS} DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/tango/server")
