set(LOG4TANGO_HEADERS
    ${CMAKE_CURRENT_SOURCE_DIR}/Appender.h
    ${CMAKE_CURRENT_SOURCE_DIR}/AppenderAttachable.h
    ${CMAKE_CURRENT_SOURCE_DIR}/LayoutAppender.h
    ${CMAKE_CURRENT_SOURCE_DIR}/FileAppender.h
    ${CMAKE_CURRENT_SOURCE_DIR}/RollingFileAppender.h
    ${CMAKE_CURRENT_SOURCE_DIR}/OstreamAppender.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Layout.h
    ${CMAKE_CURRENT_SOURCE_DIR}/PatternLayout.h
    ${CMAKE_CURRENT_SOURCE_DIR}/XmlLayout.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Logger.h
    ${CMAKE_CURRENT_SOURCE_DIR}/LogSeparator.h
    ${CMAKE_CURRENT_SOURCE_DIR}/LoggerStream.h
    ${CMAKE_CURRENT_SOURCE_DIR}/LogStreambuf.h
    ${CMAKE_CURRENT_SOURCE_DIR}/LoggingEvent.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Level.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Filter.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Portability.h
    ${CMAKE_CURRENT_BINARY_DIR}/config.h)

install(FILES ${LOG4TANGO_HEADERS} DESTINATION
    "${CMAKE_INSTALL_INCLUDEDIR}/tango/common/log4tango")
